# osi_hws

./: CMakeLists.txt  README.md  a.out  client10.cpp  client8.cpp  client9.cpp  input1.txt  input2.txt  main.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  output1.txt  output2.txt  program  server.cpp  server10.cpp  server8.cpp  server9.cpp
testDataFor10/: input31.txt  input32.txt  input41.txt  output31.txt
testDataFor4/: output12.txt
testDataFor5/: input12.txt
testDataFor6/: input12.txt  input41.txt  input42.txt  input51.txt  input52.txt  output52.txt
testDataFor7/: input42.txt
testDataFor8/: output32.txt
