cmake_minimum_required(VERSION 3.28)
project(idz1osi)

set(CMAKE_CXX_STANDARD 17)

add_executable(idz1osi
        "main4.cpp"
        main5.cpp
        main5.cpp
        main5.cpp
        main6.cpp
        main7.cpp
        client8.cpp
        server8.cpp
        client9.cpp
        server9.cpp
        client10.cpp
        server10.cpp
)
